--- a/src/components/game/Game.module.css
+++ b/src/components/game/Game.module.css
@@ -7,3 +7,9 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+
+@media (max-width: 650px) {
+  .game {
+  width: 100%;
+  }
+}
