--- a/src/components/game/Game.module.css
+++ b/src/components/game/Game.module.css
@@ -6,6 +6,7 @@
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  z-index: 0;
 }
 
 @media (max-width: 650px) {
