--- a/src/components/keyboard/Keyboard.module.css
+++ b/src/components/keyboard/Keyboard.module.css
@@ -1,7 +1,12 @@
 .keyboard {
   width: 100%;
   text-align: center;
+  font-size: 100%;
   margin: 0;
   position: fixed;
   bottom: 0%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
 }
