--- a/src/components/keyboard/KeyboardRow.module.css
+++ b/src/components/keyboard/KeyboardRow.module.css
@@ -1,3 +1,8 @@
 .row {
   text-align: center;
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  margin-top: 2px;
 }
