--- a/src/components/game/Letter.module.css
+++ b/src/components/game/Letter.module.css
@@ -1,6 +1,7 @@
 .letter {
   width: 50px;
   height: 50px;
+  line-height: 50px;
   font-size: 32px;
   font-weight: 700;
   background-color: inherit;
@@ -29,6 +30,7 @@
   .letter {
   width: 40px;
   height: 40px;
+  line-height: 40px;
   font-size: 28px;
   font-weight: 600;
   }
@@ -37,7 +39,7 @@
 @media (max-width: 200px) {
   .letter {
   width: 30px;
-  height: 30px;
+  height: 30px;line-height: 30px;
   font-size: 24px;
   font-weight: 600;
   }
