--- a/src/components/keyboard/KeyboardKey.module.css
+++ b/src/components/keyboard/KeyboardKey.module.css
@@ -14,6 +14,10 @@
   background-color: rgb(227, 227, 227);
 }
 
+.gray {
+  background-color: rgb(227, 227, 227);
+}
+
 @media (max-width: 415px) {
   .button {
     padding: 15px 13px;
